# pybel-admin

./: .bumpversion.cfg  .coveragerc  .flake8  .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
src/pybel_admin/: __init__.py  __main__.py  admin.py  application.py  cli.py  views.py
src/pybel_admin/security/: __init__.py  manager.py  models.py
src/pybel_admin/views/: __init__.py  base_view.py  core.py  security.py  web.py
tests/: test_admin.py  test_security.py
