##########################
# Setup.py Configuration #
##########################
[metadata]
name = pybel-admin
version = 0.0.1-dev
description = Parsing, validation, compilation, and data exchange of Biological Expression Language (BEL)
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/pybel/pybel-admin
download_url = https://github.com/pybel/pybel-admin/releases
project_urls =
    Bug Tracker = https://github.com/pybel/pybel-admin/issues
    Source Code = https://github.com/pybel/pybel-admin

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems Biology
    Networks Biology

[options]
install_requires =
    pybel
    click
    flask
    flask-admin

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
security =
    flask-security
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    pybel-admin = pybel_admin.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pybel_admin
omit =
    src/pybel_admin/__main__.py
    src/pybel_admin/cli.py
    tests/*
    docs/*

[coverage:paths]
source =
    src/pybel_admin
    .tox/*/lib/python*/site-packages/pybel_admin

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
